--- a/ags/.config/ags/styles.scss
+++ b/ags/.config/ags/styles.scss
@@ -25,20 +25,41 @@ $--border-radius: 2px;
 }
 
 menu {
-    background-color: $--color-bg-accent;
-    padding: $--padding-base;
-    border-bottom-left-radius: 4px;
-    border-bottom-right-radius: 4px;
+    * {
+        all: unset;
+    }
+
+    background-color: rgba($--color-bg, 1);
+    box-shadow: none;
+    color: $--color-bg-accent;
+    padding: 0.5rem;
+
+    border: 1px solid;
     border-color: rgba($--color-bg-accent, 1);
-    color: blue;
-    font-size: $--font-size * 0.75;
-    font-weight: bold;
+    border-bottom-right-radius: 4px;
+    border-bottom-left-radius: 4px;
 
     > * {
-        padding: 0.075rem;
+        transition: color 0.35s ease;
     }
-    //
-    // :hover {
-    //     color: $red;
-    // }
+
+    > *:hover {
+        color: $--color-text;
+    }
+}
+
+tooltip {
+    * {
+        all: unset;
+    }
+
+    background-color: rgba($--color-bg, 1);
+    box-shadow: none;
+    color: rgba($--color-text, 0.75);
+    padding: 0.5rem;
+
+    border: 1px solid;
+    border-color: rgba($--color-bg-accent, 1);
+    border-bottom-right-radius: 4px;
+    border-bottom-left-radius: 4px;
 }
