--- a/ags/.config/ags/styles.scss
+++ b/ags/.config/ags/styles.scss
@@ -13,7 +13,7 @@ $--padding-base: 0.3rem;
 $--spacing-base: 1rem;
 $--border-radius: 2px;
 
-@import "./windows/system/styles.scss";
+@import "./components/styles.scss";
 @import "./windows/bars/styles.scss";
 
 * {
@@ -39,11 +39,11 @@ menu {
     border-bottom-right-radius: 4px;
     border-bottom-left-radius: 4px;
 
-    > * {
-        transition: color 0.35s ease;
+    >* {
+        transition: color 0.15s ease;
     }
 
-    > *:hover {
+    >*:hover {
         color: $--color-text;
     }
 }
