--- a/ags/.config/ags/styles.scss
+++ b/ags/.config/ags/styles.scss
@@ -63,3 +63,43 @@ tooltip {
     border-bottom-right-radius: 4px;
     border-bottom-left-radius: 4px;
 }
+
+switch {
+    // margin: 0;
+    // padding: 0;
+    // min-width: 4rem;
+    border-radius: 5px;
+    border: 1px solid transparentize($--color-text, 0.75);
+    background-color: $--color-bg;
+    outline-offset: -50px;
+
+    &:checked {
+        slider {
+            background-color: $--color-primary;
+        }
+
+        background-color: transparentize($--color-bg, 1.0);
+    }
+
+    &:hover {
+        background-color: transparentize($--color-text, 0.80);
+    }
+
+    slider {
+        border-radius: 10px;
+        margin: 2px;
+        padding: 0.5px;
+        min-width: 1rem;
+        min-height: 1rem;
+        background-color: $--color-text;
+        border: 0.5px solid transparent;
+        border-radius: 50%;
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.4);
+        transition: all 200ms cubic-bezier(0.25, 0.46, 0.45, 0.94);
+        -gtk-outline-radius: 20px;
+    }
+
+    image {
+        color: transparent;
+    }
+}
