--- a/ags/.config/ags/windows/bars/styles.scss
+++ b/ags/.config/ags/windows/bars/styles.scss
@@ -175,71 +175,43 @@ box.WidgetCava {
         margin-bottom: -5px;
         font-size: 0.70em;
     }
-
-    // background-color: $--color-bg-accent;
 }
-
-
 
 box.WidgetMedia {
     background-size: cover;
     background-position: center;
     margin: 0px;
-    padding: 0px 10px;
+    padding: 0px 0px;
 
-    &.spotify {
-        color: #1ed760;
-    }
+    box.media {
+        .progress {
+            min-width: 15px;
+            /* its size is min(min-height, min-width) */
+            margin: 0px;
+            font-size: 1.5px;
+            padding: 0px;
+            margin: 0px;
+            color: $--color-text;
+        }
 
-    &.vlc {
-        color: #ff9500;
-    }
+        .spotify {
+            color: #1ed760;
+        }
 
-    &.youtube {
-        color: #ff0000;
-    }
-
-    &.brave {
-        color: #ff9500;
-    }
-
-    &.audacious {
-        color: #ff9500;
-    }
-
-    &.rhythmbox {
-        color: #ff9500;
-    }
-
-    &.chromium {
-        color: #ff9500;
-    }
-
-    &.firefox {
-        color: #ff9500;
-    }
-
-    .progress {
-        min-width: 15px;
-        /* its size is min(min-height, min-width) */
-        margin: 0px;
-        /* you can set margin on it */
-        font-size: 1px;
-        padding: 0px;
-        margin: 0px;
-
-        .icon {
-            color: unset;
-            /* you can set color on it */
+        .LibreWolf {
+            color: $--color-success;
         }
     }
 
     .artist {
-        color: transparentize($--color-text, 0.5);
-        font-style: italic;
+        font-size: $--font-size * 0.9;
+        color: transparentize($--color-warning, 0.0);
     }
 
-    .title {}
+    .title {
+        font-size: $--font-size * 0.9;
+        color: $--color-text;
+    }
 }
 
 // --------------------------------------------- TOP BAR -----------------------------------------
