further wip wallpaper selector

--- a/ags/.config/ags/styles.scss
+++ b/ags/.config/ags/styles.scss
@@ -15,6 +15,7 @@ $--border-radius: 2px;
 
 @import "./components/styles.scss";
 @import "./windows/bars/styles.scss";
+@import "./windows/wallpaper/styles.scss";
 
 * {
     all: unset;
