--- a/fabric/.config/fabric/src/styles/styles.scss
+++ b/fabric/.config/fabric/src/styles/styles.scss
@@ -1,9 +1,20 @@
+@use "./settings" as settings;
+@use "./themes/catpuccin-mocha.scss" as theme;
+
+@use "./corners.scss";
+@use "./desktop-info.scss";
+@use "./topbar.scss";
+
 * {
     all: unset;
+    font-size: settings.$font-size;
+    font-family: settings.$font-name;
+    font-style: settings.$font-style;
 }
 
 #corner-container {
     background-color: transparent;
-    /* min-width: 100px;
+    /* handled in code via config values
+    min-width: 100px;
     min-height: 100px; */
 }
