--- a/fabric/.config/fabric/src/styles/styles.scss
+++ b/fabric/.config/fabric/src/styles/styles.scss
@@ -18,3 +18,22 @@
     min-width: 100px;
     min-height: 100px; */
 }
+
+#fabric-overlay {
+    background-color: red;
+
+    #revealer {
+        padding: 10px;
+    }
+}
+
+#power-menu {
+    color: red;
+    background-color: transparent;
+    min-height: 1px;
+    min-width: 1px;
+}
+
+#power-menu-pop-up {
+    border: 2px solid yellow;
+}
