--- a/fabric/.config/fabric/src/styles/settings.scss
+++ b/fabric/.config/fabric/src/styles/settings.scss
@@ -13,7 +13,9 @@ $dock-opacity: 50; */
 $corners-color: theme.$background-dark;
 
 $desktop-info-time-color: theme.$accent-yellow;
-$desktop-info-date-color: theme.$accent-red;
+$desktop-info-date-color: theme.$accent-green;
+$desktop-info-category-color: theme.$surface-highlight;
+$desktop-info-content-color: theme.$text-main;
 $desktop-info-time-size: 9rem;
 $desktop-info-date-size: 3rem;
 
