--- a/fabric/.config/fabric/src/styles/desktop-info.scss
+++ b/fabric/.config/fabric/src/styles/desktop-info.scss
@@ -1,8 +1,9 @@
 @use "./settings" as settings;
 
-#desktop-clock-box {
+#desktop-info-container {
     font-family: settings.$font-name;
-    margin: 0 10rem 10rem 10rem;
+    margin: 5rem;
+    padding: 30px;
     // TODO: Only when created
     transition: all 0.25s cubic-bezier(0.5, 0.25, 0, 1);
 
@@ -16,5 +17,26 @@
         color: settings.$desktop-info-date-color;
         font-size: settings.$desktop-info-date-size;
         font-weight: settings.$font-weight;
+    }
+
+    #system-info {
+        font-family: settings.$font-name;
+        * > {
+        }
+        /* background-color: yellow; */
+        /* color: red; */
+        #category {
+            color: settings.$desktop-info-category-color;
+            font-size: 13px;
+            /* color: red; */
+            font-weight: bold;
+        }
+        #content {
+            color: settings.$desktop-info-content-color;
+            font-size: 13px;
+            /* color: red; */
+            font-weight: 400;
+            /* font-weight: normal; */
+        }
     }
 }
