--- a/fabric/.config/fabric/src/styles.css
+++ b/fabric/.config/fabric/src/styles.css
@@ -122,7 +122,128 @@ $dock-opacity: 50; */
   opacity: 1;
 }
 #top-bar #clock {
-  color: #cdd6f4;
+  color: #f9e2af;
+}
+
+/* #power-menu-button {
+    border: 3px solid white;
+} */
+#power-menu {
+  min-height: 1px;
+  min-width: 1px;
+}
+
+#grid {
+  /* border: 3px solid orange; */
+}
+#grid #power-control-button {
+  /* border: 3px solid pink; */
+}
+
+#power-menu-pop-up {
+  color: #f5e0dc;
+  background-color: #11111b;
+  padding: 2px 4px;
+  border: 1px solid #1e1e2e;
+  border-radius: 5px;
+  border-top: 0px;
+  border-top-left-radius: 0px;
+  border-top-right-radius: 0px;
+  /* border: 2px solid yellow; */
+}
+
+#power-control-button {
+  padding: 0.5rem;
+}
+#power-control-button .panel-text {
+  font-weight: normal;
+  margin-left: 1rem;
+}
+
+#power-control-button:hover {
+  border-radius: 4px;
+  background-color: #585b70;
+}
+
+menu {
+  color: #45475a;
+  font-weight: bold;
+  margin: 0.375em;
+  padding: 0.5em;
+  background-color: #11111b;
+  background-clip: border-box;
+  border-radius: 5px;
+  border: 1px solid #1e1e2e;
+}
+
+menuitem {
+  /* transition: background-color 200ms cubic-bezier(0, 0, 0.2, 1); */
+  transition: color 200ms cubic-bezier(0, 0, 0.2, 1);
+  min-height: 16px;
+  min-width: 40px;
+  padding: 0.2em;
+  background-clip: border-box;
+  border-radius: 5px;
+}
+menuitem arrow {
+  min-height: 16px;
+  min-width: 16px;
+  -gtk-icon-source: -gtk-icontheme("pan-end-symbolic");
+  margin-left: 8px;
+}
+menuitem separator {
+  min-height: 1px;
+  margin: 0.25em 0;
+  background-color: white;
+}
+
+menu > menuitem:hover {
+  color: #f5e0dc;
+  /* background-color: settings.$menu-hover-bg-color; */
+}
+
+menu > arrow {
+  min-height: 16px;
+  min-width: 16px;
+  padding: 0.25em;
+  color: white;
+}
+
+menu > arrow.top {
+  margin-top: 0;
+  border-radius: 6px;
+  -gtk-icon-source: -gtk-icontheme("pan-up-symbolic");
+}
+
+menu > arrow.bottom {
+  margin-top: 8px;
+  margin-bottom: -12px;
+  border-radius: 6px;
+  -gtk-icon-source: -gtk-icontheme("pan-down-symbolic");
+}
+
+@keyframes tooltipShow {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+tooltip {
+  opacity: 1;
+  background-color: #1e1e2e;
+  border: 1px solid #45475a;
+  border-radius: 5px;
+  animation: tooltipShow 0.25s cubic-bezier(0.5, 0.25, 0, 1);
+}
+tooltip label {
+  color: #f5e0dc;
+  font-weight: normal;
+}
+
+tooltip > * {
+  padding: 6px 10px;
 }
 
 * {
@@ -137,22 +258,4 @@ $dock-opacity: 50; */
   /* handled in code via config values
   min-width: 100px;
   min-height: 100px; */
-}
-
-#fabric-overlay {
-  background-color: red;
-}
-#fabric-overlay #revealer {
-  padding: 10px;
-}
-
-#power-menu {
-  color: red;
-  background-color: transparent;
-  min-height: 1px;
-  min-width: 1px;
-}
-
-#power-menu-pop-up {
-  border: 2px solid yellow;
 }
